# nevco

./: .gitignore  README.md  app.js  hockey_keypad_coordinates.csv  index.html  nevco_mpcw7_hockey.af~lock~  package-lock.json  package.json  styles.css
.github/workflows/: build-desktop.yml
fonts/: fonts.css
scripts/: copy-frontend.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
