[package]
name = "nevco4770"
version = "1.0.0"
description = "Nevco 4770 Hockey Scoreboard Emulator"
authors = ["Arcwire"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nevco4770_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
